# melon-monarch-ingest

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/agents/: cloud-ops-specialist.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  decision.md  drift-check.md  milestone.md  simplify.md
.github/workflows/: ci.yml  code-reviewer-gate.yml
docs/: data-model.md  import.md
docs/decisions/: 0002-csv-validation-and-hashing.md  0003-sqlalchemy-sync.md  0004-cli-typer.md  0007-account-identity-and-content-hash.md  README.md
migrations/: env.py
migrations/versions/: 08d910599bec_drop_unique_mask_index_mask_adr_0007.py
scripts/: apply_branch_protection.sh  block_real_monarch_csv.py  branch_protection_config.json  check_reviewer_verdict.py
src/monarch_ingest/: __init__.py  cli.py  db.py  hashing.py  migrate.py  resolve.py  rules.py
src/monarch_ingest/importers/: __init__.py  balances.py  result.py  transactions.py
src/monarch_ingest/migrations/versions/: 11fdf91169d9_add_rule_table.py  598e57315a29_initial_schema.py
src/monarch_ingest/models/: __init__.py  core.py
src/monarch_ingest/parsers/: __init__.py  csv_reader.py  schemas.py
tests/: conftest.py  test_fixtures.py
tests/docs/: test_data_model_is_current.py
tests/fixtures/: README.md  sample_balances.csv  sample_transactions.csv
tests/unit/: test_cli.py  test_cli_rules.py  test_hashing.py  test_models.py  test_parsers.py  test_resolve.py  test_rules.py
